--- a/messwebsite/templates/home.html
+++ b/messwebsite/templates/home.html
@@ -6,8 +6,11 @@
   <div class="body">
     <div class="d1">
       <img src="{% static 'images/Indian_Institute_of_Technology,_Indore_Logo.png' %}">
-      <h2>IIT Indore Central Dining Facility</h2>
     </div>
+    <div class="d1 my-1">
+      <br><br>
+      <h2>IIT Indore Central Dining Facility</h2>
+    </div
     <div class="d2">
       {% if user.is_authenticated %}
         <a href='/logout/'><button> <i class="fa-solid fa-user"></i> Logout</button></a>
