--- a/messwebsite/templates/rules.html
+++ b/messwebsite/templates/rules.html
@@ -723,7 +723,7 @@
             <li class="li-pd">Mess is mandatory for Hostellers. Students cannot mess out on their own and cannot claim mess rebate for the same.</li>
             <li class="li-pd">Residents, desirous of availing mess rebate, will be required to inform the caterer, through the Dining Committee.</li>
             <li class="li-pd">All rebate requests are to be filled in the prescribed form and no email request will be entertained.</li>
-            <li class="li-pd">As per current rules, short term rebate can be applied for a minimum of 2-7 consecutive days. Further, a maximum of 8 days/month of rebate can be availed in short term rebate..</li>
+            <li class="li-pd">As per current rules, short term rebate can be applied for a minimum of 2-7 consecutive days. Further, a maximum of 8 days/month of rebate can be availed in short term rebate.</li>
             <li class="li-pd">For a period exceeding 7 consecutive days, residents are to apply for long term rebate duly recommended by the concerned Faculty Advisor/Supervisor/HoD.</li>
             <li class="li-pd">All recommended applications for a rebate should be submitted to the Dining Office, two days before the day of commencement of rebate period, latest by 5 p.m.</li>
             <li class="li-pd">No resident, who is on rebate, will be allowed to avail the mess facility based on extras or guest of other residents.</li>
