--- a/messwebsite/templates/caterer.html
+++ b/messwebsite/templates/caterer.html
@@ -13,7 +13,7 @@
       {% for item in caterer %}
             <div class="col-md-4">
               <div class="card my-3">
-                <img src="{{ item.image.url }}" class="card-img-top mx-2 my-2" alt="{{ item.name }}" style="height: 200px; object-fit: cover;">
+                {% comment %} <img src="{{ item.image.url }}" class="card-img-top mx-2 my-2" alt="{{ item.name }}" style="height: 200px; object-fit: cover;"> {% endcomment %}
                 <div class="card-body">
                   <h5 class="card-title">{{ item.name }}</h5>
                   <p class="card-text">Point of Contact: {{ item.student_limit }}</p>
