--- a/messwebsite/templates/base.html
+++ b/messwebsite/templates/base.html
@@ -218,7 +218,7 @@
         </ul>
       {% endif %}
     {% else %}
-        <a class="nav-link" href="login/">Login</a>
+        <a class="nav-link" href="/login">Login</a>
     {% endif %} 
     </div>
 </div>
