--- a/templates/adminjobs.html
+++ b/templates/adminjobs.html
@@ -24,8 +24,8 @@
           </div>
           <div class="row d-flex justify-content-between align-items-center panel bg-panel my-3">
             <div class="col-md-9">
-              <h3 class="heading-form">Add/Remove/Edit Caterer's Info</h3>
-              <h6 class="desc-form">Add/Remove Caterers or edit their information</h6>
+              <h3 class="heading-form">Add/Edit Caterer's Info</h3>
+              <h6 class="desc-form">Add Caterers or edit their information</h6>
             </div>
             <div class="col-md-3">
               <a class="btn btn-outline-primary"
@@ -35,8 +35,8 @@
 
           <div class="row d-flex justify-content-between align-items-center panel bg-panel my-3">
             <div class="col-md-9">
-              <h3 class="heading-form">Add/Remove/Edit Cafeteria Info</h3>
-              <h6 class="desc-form">Add/Remove Cafeteria or edit their information</h6>
+              <h3 class="heading-form">Add/Edit Cafeteria Info</h3>
+              <h6 class="desc-form">Add Cafeteria or edit its information</h6>
             </div>
             <div class="col-md-3">
               <a class="btn btn-outline-primary"
