--- a/templates/cafeteria.html
+++ b/templates/cafeteria.html
@@ -10,13 +10,13 @@
 {% endblock %}
 {% block body %}
 <Main class="parent">
-  <h1 class="mx-5 my-4">Additional Services</h1>
-  <div class="container">
+  {% comment %} <h2 class="mx-5 my-4">Additional Services</h2> {% endcomment %}
+  <div class="container my-5">
     <div class="row justify-content-around">
       {% for item in cafeteria_items %}
         <div class="col-md-4">
           <div class="card my-3">
-            {% comment %} <img src="{{ item.image.url }}" class="card-img-top mx-2 my-2" alt="{{ item.name }}" style="height: 200px; object-fit: cover;"> {% endcomment %}
+            <img src="/media/{{ item.image }}" class="card-img-top mx-2 my-2" alt="{{ item.name }}" style="height: 200px; object-fit: cover;">
             <div class="card-body">
               <h5 class="card-title">{{ item.name }}</h5>
               <p class="card-text">Point of Contact: {{ item.phone_number }}</p>
