--- a/templates/caterer.html
+++ b/templates/caterer.html
@@ -13,10 +13,10 @@
       {% for item in caterer %}
             <div class="col-md-4">
               <div class="card my-3">
-                {% comment %} <img src="{{ item.image.url }}" class="card-img-top mx-2 my-2" alt="{{ item.name }}" style="height: 200px; object-fit: cover;"> {% endcomment %}
+                <img src="/media/{{ item.image }}" class="card-img-top mx-2 my-2" alt="{{ item.name }}" style="height: 200px; object-fit: cover;">
                 <div class="card-body">
                   <h5 class="card-title">{{ item.name }}</h5>
-                  <p class="card-text">Point of Contact: {{ item.student_limit }}</p>
+                  <p class="card-text">Point of Contact: {{ item.email }}</p>
                 </div>
               </div>
             </div>
