--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,7 +3,21 @@
 {%block externalCss%} 
 {% load i18n%}
 <link rel="stylesheet" href="{% static 'css/home.css' %}" />
-
+<style>
+    body {
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh; /* Set minimum height to viewport height */
+    }
+    
+    .container {
+        flex-grow: 1; /* Allow container to grow to fill remaining space */
+    }
+    
+    footer {
+        margin-top: auto; /* Push footer to bottom */
+    }
+</style>
 {% endblock %} 
 {% block body %}
 <body>
@@ -27,10 +41,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 mb-3">
+            {% comment %} <div class="col-md-6 mb-3">
                 <div class="card mt-4">
-                    <div class="card-body">
-                        <h6 class="card-subtitle">Select Semester:</h6>
+                    <div class="card-body"> {% endcomment %}
+                        {% comment %} <h6 class="card-subtitle">Select Semester:</h6>
                         <select class="form-control" id="semester-select">
                             <option value="default">Semesters</option>
                             <option value="autumn22">Autumn Semester 2022</option>
@@ -41,18 +55,19 @@
                         <h6 id="new-instructions" class="mt-2" style="display: none;">Select a period to view rebate bills</h6>
                         <select class="form-control" id="period-select">
                             <option value="default">Period Range</option>
-                        </select>
-                        <hr>
-                        <h5 class="card-title">Rebate Bills</h5>
+                        </select> {% endcomment %}
+                        {% comment %} <hr> {% endcomment %}
+                        {% comment %} <h5 class="card-title">Rebate Bills</h5>
                         <div id="rebate-data" class="d-block">
-                            <div id="short"></div>
+                            <div id="short">{% for rebate in short_reabte %}
+                                <p>{{ rebate }}</p>
+                                {% endfor %}</div>
+                            </div>
                             <div id="long"></div>
-                            <div id="high_tea"></div>
-                            <div id="bills"></div>
                         </div>
-                    </div>
-                </div>
-            </div>
+                    </div> {% endcomment %}
+                {% comment %} </div>
+            </div> {% endcomment %}
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
